--- a/src/components/homepage/Homepage.css
+++ b/src/components/homepage/Homepage.css
@@ -7,3 +7,19 @@
     @apply absolute w-0.5 h-full bg-dark -translate-x-1/2;
     left: calc(20% + 1.5rem + 1.5rem / 2);
 }
+
+.sticky-contact-icon {
+    &:hover {
+        path {
+            fill: #ffffff;
+        }
+    }
+}
+
+.sticky-contact-icon-cv {
+    &:hover {
+        path {
+            stroke: #ffffff;
+        }
+    }
+}
